--- a/index.html
+++ b/index.html
@@ -11,13 +11,31 @@
   </head>
   <body>
     <div class="pomodoro">
-      <h1>Pomo time!</h1>
-      <h3 class="pomodoro__mode">Work</h3>
-      <div class="pomodoro__time">25:00</div>
+      <div class ="timer-container">
+      <h1 class="pomodoro__time">25:00</h1>
+      </div>
+      <p class="pomodoro__mode">Work</p>
       <div class="pomodoro__controls">
         <button id="startButton">start</button>
-        <button id="resetButton">reset</button>
         <button id="pauseButton">pause</button>
+        <button id="resetButton">reset</button>
+      </div>
+      
+      <div class="pomodoro__controls">
+      <button id="toggle-settings">Customize Time</button>
+      </div>
+
+      <div id="slider-container" style="display: none;">
+        <label for="work-slider">Work Minutes: <span id="work-value">25</span></label>
+        <input type="range" id="work-slider" min="5" max="60" value="25">
+
+        <label for="break-slider">Break Minutes: <span id="break-value">5</span></label>
+        <input type="range" id="break-slider" min="1" max="30" value="5">
+
+        <button id="save-settings">OK</button>
+        
+      </div>
+
       </div>
     </div>
     <script src = "renderer.js"></script>
