Added pulsing animation to custom alert.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   </head>
   <body>
+    <!-- Timer -->
     <div class="pomodoro">
       <div class ="timer-container">
       <h1 class="pomodoro__time">25:00</h1>
@@ -24,6 +25,8 @@
       <div class="pomodoro__controls">
       <button id="toggle-settings">Customize Time</button>
       </div>
+
+      <!--Sliders-->
 
       <div id="slider-container" style="display: none;">
         <label for="work-slider">Work Minutes: <span id="work-value">25</span></label>
@@ -41,10 +44,10 @@
       <!-- ALERT BOX -->
 
       <div id="custom-alert" class="pixel-alert hidden">
-        <img src="assets/ui/break-time-alert.png" alt="Alert Box" id="alert-bg" draggable="false">
+        <img src="assets/images/break-time-alert.png" alt="Alert Box" id="alert-bg" draggable="false">
         <div class="alert-text">
           <p id="alert-message">Time for a break!</p>
-          <button id="alert-ok">OK</button>
+          <button id="alert-ok">okay</button>
         </div>
       </div>
       
