Added slider for selecting pomo cycles.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <label for="break-slider">Break Minutes: <span id="break-value">5</span></label>
         <input type="range" id="break-slider" min="1" max="30" value="5">
 
-        <!-- <label for="cycle-slider">Pomo cycles:<span id="cycle-value">5</span></label>
-        <input type="range" id="cycle-slider" min="1" max="10" value="4"> -->
+        <label for="cycle-slider">Pomo cycles: <span id="cycle-value">5</span></label>
+        <input type="range" id="cycle-slider" min="1" max="10" value="4">
 
         <button id="save-settings">OK</button>
         
