First implementation of task list logic.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
         </div>
       </div>
       
+      <!-- TASK LIST-->
+
+      <button id="open-task-list">Tasks</button>
+      
+      <div id="task-list" style="display: none;">
+        <h4>What do you need to get done today?</h4>
+        <div id="new-task-input">
+          <input type="text" id="new-task-input" placeholder="enter a new task...">
+          <button id="add-task-button">add task</button>
+        </div>
+        <div id="task-container">
+          <!-- tasks will populate here-->
+        </div>
+        <button id="close-task-list">close</button>
+      </div>
+
+
     </div>
     <script src = "renderer.js"></script>
   </body>
