Added ability to add tasks and display them in task list.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <!--Sliders-->
 
-      <div id="slider-container" style="display: none;">
+      <div id="slider-container" class="hidden">
         <label for="work-slider">Work Minutes: <span id="work-value">25</span></label>
         <input type="range" id="work-slider" min="1" max="60" value="25">
 
@@ -57,18 +57,18 @@
       <!-- TASK LIST-->
 
       <button id="open-task-list">Tasks</button>
-      
-      <div id="task-list" style="display: none;">
-        <h4>What do you need to get done today?</h4>
-        <div id="new-task-input">
-          <input type="text" id="new-task-input" placeholder="enter a new task...">
-          <button id="add-task-button">add task</button>
-        </div>
-        <div id="task-container">
-          <!-- tasks will populate here-->
-        </div>
-        <button id="close-task-list">close</button>
+
+      <div id="task-list" class="hidden">
+      <h4>What do you need to get done today?</h4>
+      <div id="task-container">
+        <!-- tasks will populate here -->
       </div>
+      <div id="new-task-input">
+        <input type="text" id="task-input-field" placeholder="enter a new task..." class="hidden">
+        <button id="add-task-button">add task</button>
+      </div>
+      <button id="close-task-list">close</button>
+    </div>
 
 
     </div>
